Fix codehilite overflow

--- a/app/static/styles/less/project.less
+++ b/app/static/styles/less/project.less
@@ -114,6 +114,7 @@
 		}
 		.codehilite {
 			padding: 2px 24px;
+			overflow-x: scroll;
 		}
 		code {
 			font-family: 'Source Code Pro', monospace;
@@ -122,8 +123,10 @@
 		}
 		.button {
 			padding: 12px 24px;
+			margin: 12px 0;
 			font-family: @font-title;
 			text-transform: uppercase;
+			font-size: 80%;
 			font-weight: bold;
 			display: inline-block;
 			.transition(1.5*@transition-time);
@@ -234,7 +237,7 @@
 				display: block;
 			}
 			.cover-headline {
-				padding: 12px 0;
+				padding: 24px 0;
 			}
 			.cover-headline .container {
 				max-width: 100%;
